# dictionary-openapi.yaml
@@ -1549,6 +1549,10 @@ components:
           type: string
           format: date-time
           description: Last Updating Date
+        deletedAt:
+          type: string
+          format: date-time
+          description: Deleted Date
     ActivityType:
       type: string
       description: Activity Type
